fix overflow

--- a/css/utils/reset.css
+++ b/css/utils/reset.css
@@ -3,26 +3,30 @@
 *::before,
 html,
 body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  line-height: 1.4;
-  -webkit-font-smoothing: antialiased;
-  text-decoration: none;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
+	line-height: 1.4;
+	-webkit-font-smoothing: antialiased;
+	text-decoration: none;
 }
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
+}
+
+body {
+	overflow-x: hidden;
 }
 
 ul,
 li {
-  list-style: none;
+	list-style: none;
 }
 
 img {
-  display: block;
-  max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
